--- a/videos.htm
+++ b/videos.htm
@@ -12,7 +12,7 @@ Videos
 Videos
 </h1>
 <h2 class = "navigator" style = "font-size: 20px;">
-<a href = "homepage.htm"> Home</a> |
+<a href = "index.htm"> Home</a> |
 <a href = "gallery.htm">Gallery
 </a>
 </h2>
