--- a/gallery.htm
+++ b/gallery.htm
@@ -12,7 +12,7 @@
 </h1>
 <body>
 <h2 class = "navigator" style = "font-size: 20px;">
-<a href = "homepage.htm"> Home</a> |
+<a href = "index.htm"> Home</a> |
 <a href = "videos.htm">Videos
 </a>
 </h2>
