--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" />
-	<meta name = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." />
-	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg"/>
+	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" >
+	<meta name = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." >
+	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg">
 	<link rel = "stylesheet" href = "css/styles.css">
 	<link rel="icon" href="img/Picture1.png" type="image/icon type">
 
