--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,9 @@
 	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" /\>
 	<meta property = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." >
 	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg">
-	<meta property = "og:url" content = "tswift.rocks">
+	<meta property = "og:url" content = "https://www.tswift.rocks">
 	<meta property = "og:type" content = "website">
-	<meta property="fb:app_id" content=""ХХХХХХХХХХХХХХХ" >
+	<meta property="fb:app_id" content="ХХХХХХХХХХХХХХХ" >
 	<link rel = "stylesheet" href = "css/styles.css">
 	<link rel="icon" href="img/Picture1.png" type="image/icon type">
 
