--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg">
 	<meta property = "og:url" content = "https://www.tswift.rocks">
 	<meta property = "og:type" content = "website">
-	<meta property= "fb:app:id" content= "184882133299334" >
+	<meta property= "fb:app_id" content= "184882133299334" >
 	<link rel = "stylesheet" href = "css/styles.css">
 	<link rel="icon" href="img/Picture1.png" type="image/icon type">
 
