--- a/index.htm
+++ b/index.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" >
-	<meta property = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." >
-	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg">
-	<meta property = "og:url" content = "https://www.tswift.rocks">
-	<meta property = "og:type" content = "website">
-	<meta property= "fb:app_id" content= "184882133299334" >
+	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" />
+	<meta property = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." />
+	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg"/>
+	<meta property = "og:url" content = "https://www.tswift.rocks"/>
+	<meta property = "og:type" content = "website"/>
+	<meta property = "fb:app_id" content = "184882133299334" />
 	<link rel = "stylesheet" href = "css/styles.css">
-	<link rel="icon" href="img/Picture1.png" type="image/icon type">
+	<link rel="icon" href="img/Picture1.png" type="image/icon type" >
 
 <title>
 	This is Taylor Swift
