--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta property = "og:title" content = "This is Taylor Swift (Fan Made)" />
+	<meta property = "og:title" content = "This is Taylor Swift" />
 	<meta property = "og:description" content = "This is a Taylor Swift fan page I did for a school work. This is a work in progress." />
 	<meta property = "og:image" content = "https://www.tswift.rocks/img/taylor1.jpg"/>
 	<meta property = "og:url" content = "https://www.tswift.rocks"/>
