--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,8 @@
 </tr>
 </table>
 </body>
-<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=2613966968/size=large/bgcol=ffffff/linkcol=de270f/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://mictony.bandcamp.com/track/its-so-easy">It&#39;s So Easy by Mic Tony</a></iframe>
+<br>
+<iframe style="border:0;background-color:white; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2613966968/size=small/bgcol=ffffff/linkcol=f171a2/transparent=true/" seamless><a href="https://mictony.bandcamp.com/track/its-so-easy">It&#39;s So Easy by Mic Tony</a></iframe>
 </div>
 <div class="footer">
   <article> Michael Anthony Bitoon © 2020</article>
