--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,8 @@
 	title= "Link to wikipedia page" >
 	 - Wikipedia
 </a> 
+<a href= "blog.htm">| My Blog</a>
+
 </p>
 
 <table >
@@ -52,12 +54,15 @@
 	src = "img/pic2.jpg"
 	style = "width:240px;height:240px;border-radius:200px;padding:5px;"> </a>
 </tr>
+
 </table>
+
 </body>
+
 
 </div>
 <div class="footer">
-  <article> Michael Anthony Bitoon © 2020</article>
+  <article>  Michael Anthony Bitoon © 2020 </article>
 </div>
 
 </html>
