--- a/blog.htm
+++ b/blog.htm
@@ -14,7 +14,7 @@ Michael Anthony Bitoon
 <body >
 	
 	<div style = "margin:2%;">
-		Welcome message.
+		Welcome message. Your can also <a href = "index.htm" >go back to home</a>.
 	</div>
 	<div style = "margin:0 5%">
 	<div class = "content" >
