--- a/blog.htm
+++ b/blog.htm
@@ -12,6 +12,8 @@ Michael Anthony Bitoon
 	Michael Anthony Bitoon
 </h1>
 <body >
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0&appId=184882133299334&autoLogAppEvents=1" nonce="54fr6ZGC"></script>
 	
 	<div style = "margin:2%;">
 		Welcome message. Your can also <a href = "index.htm" >go back to home</a>.
