--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,6 @@
 	
 </h1>
 <body>
-
 <div class = "content">
 <img 
 	src = "img/taylor1.jpg" 
@@ -38,6 +37,11 @@
 <a href= "blog.htm">| My Blog</a>
 
 </p>
+<div class = "announcements">
+	<b><i>!!!!!!! ANNOUNCEMENT !!!!!</i></b><br><hr>
+	 Taylor just announced her 9th studio album titled "evermore" to be released this midnight at eastern time. She revealed this album in surprise stating it's a sister-album of folklore and that she couldn't just stop writing. <br><hr>
+	 <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2FTaylorSwift%2Fposts%2F10158417415490369&show_text=false&width=552&appId=184882133299334&height=498" width="100%" height="498" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+</div>
 
 <table >
 <tr>
