--- a/gallery.htm
+++ b/gallery.htm
@@ -49,11 +49,11 @@
 	<div  class = "gallery"> 
 		<a target = "_blank" href = "img/folklore.jpg">
 		<img src = "img/folklore.jpg" class = "img" style = "object-position:0 0;"></a>
-		<div class = "decsription"> Folklore Album Photoshoop</div> </div>
+		<div class = "decsription"> Folklore Album Photoshoot</div> </div>
 	<div  class = "gallery"> 
 		<a target = "_blank" href = "img/evermore.jpg">
 		<img src = "img/evermore.jpg" class = "img" style = "object-position:0 0;"></a>
-		<div class = "decsription"> Evermore Album Photoshoop</div> </div>
+		<div class = "decsription"> Evermore Album Photoshoot</div> </div>
 	<div  class = "gallery"> 
 		<a target = "_blank" href = "img/funny.jpg">
 		<img src = "img/funny.jpg" class = "img"></a>
