--- a/blog.htm
+++ b/blog.htm
@@ -21,14 +21,8 @@ Michael Anthony Bitoon
 	<div style = "margin:0 5%">
 	<div class = "content" >
 		<article>
-		<b>Content card 1</b> <br>
-		<article class ="text">This is an article.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+		<b>Download evermore bonus tracks.</b> <br>
+		<article class ="text"><br>16. right where you left me - <button type="submit" onclick="window.open('music/16 right where you left me.mp3')"> Download</button><br>17. it's time to go - <button type="submit" onclick="window.open('music/17 it's time to go.mp3')"> Download</button></article>
 		</article>
 		<article>
 		<b>Content card 2</b><br>
