--- a/blog.htm
+++ b/blog.htm
@@ -21,13 +21,7 @@ Michael Anthony Bitoon
 	<div style = "margin:0 5%">
 	<div class = "content" >
 		<article>
-		<b>Download evermore bonus tracks.</b>This is an article.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+		<b>Download books in epub format.</b>The River Within by Karen Powell<a href="books/The River Within by Karen Powell.epub">- DOWNLOAD </a> </article>
 		</article>
 		<article>
 		<b>Content card 2</b><br>
