--- a/blog.htm
+++ b/blog.htm
@@ -21,7 +21,7 @@ Michael Anthony Bitoon
 	<div style = "margin:0 5%">
 	<div class = "content" >
 		<article>
-		<b>Download books in epub format.</b>The River Within by Karen Powell<a href="books/The River Within by Karen Powell.epub">- DOWNLOAD </a> </article>
+		<b>Download books in epub format.</b><br>The River Within by Karen Powell<a href="books/The River Within by Karen Powell.epub"> - DOWNLOAD </a> </article>
 		</article>
 		<article>
 		<b>Content card 2</b><br>
