--- a/blog.htm
+++ b/blog.htm
@@ -25,13 +25,8 @@ Michael Anthony Bitoon
 		</article>
 		<article>
 		<b>Content card 2</b><br>
-		<article class="text">This is an article.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+		<article class="text">3D Objects.
+		Banana - <a href="objects/banana.rar">DOWNLOAD</a></article>
 		</article>
 		<article>
 		<b>Content card 3</b><br>
