--- a/blog.htm
+++ b/blog.htm
@@ -24,8 +24,8 @@ Michael Anthony Bitoon
 		<b>Download books in epub format.</b><br>The River Within by Karen Powell<a href="books/The River Within by Karen Powell.epub"> - DOWNLOAD </a> </article>
 		</article>
 		<article>
-		<b>Content card 2</b><br>
-		<article class="text">3D Objects.
+		<b>3D Objects</b><br>
+		<article class="text">
 		Banana - <a href="objects/banana.rar">DOWNLOAD</a></article>
 		</article>
 		<article>
